tests/kotlin/syn15.kt
// error: variable declarations must appear before any executable statement
fun main() {
    println("hello");
    val x: Int = 5;
}